--- a/client/src/styles/CharacterCard.scss
+++ b/client/src/styles/CharacterCard.scss
@@ -1,4 +1,36 @@
 .card{
     display: flex;
     flex-direction: column;
+    gap:0.2rem;
+    justify-content: space-between;
+    padding: 0 0 0.4rem 0;
+    border:1px solid grey;
+    align-items: center;
+    border-radius: 1rem;
+    max-height: 400px;
+    max-width: 300px;
+    img{
+    border-radius: 1rem;
+}
+}
+
+.name{
+ text-align: center;
+  word-wrap:break-word;
+  font-size: 1.6rem;
+ }
+
+
+
+.tags{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:1rem;
+    span{
+        background-color: darkgray;
+        border-radius: 3px;
+        padding: 3px 5px;
+    }
 }
