--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -1,4 +1,13 @@
 nav{
     display: flex;
     justify-content: center;
+    align-items: center;
+    a{
+        text-decoration: none;
+        color:grey
+    }
+}
+
+.active{
+    color:darkslategrey
 }
