--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@ body {
   padding: 0;
   max-width: 100%;
 }
+
+button{
+  cursor: pointer;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
