--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -3,4 +3,7 @@
     max-width: 100%;
     background-color: lightgrey;
     padding: 1rem 4rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
