--- a/client/src/styles/CharacterCard.scss
+++ b/client/src/styles/CharacterCard.scss
@@ -7,11 +7,14 @@
     border:1px solid grey;
     align-items: center;
     border-radius: 1rem;
-    max-height: 400px;
+    height: fit-content;
     max-width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     img{
     border-radius: 1rem;
-}
+    width: 100%;
+    height: 260px;
+    }
 }
 
 .name{
