--- a/client/src/styles/Filters.scss
+++ b/client/src/styles/Filters.scss
@@ -8,7 +8,8 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap:2rem;
+    column-gap:2rem;
+    row-gap: 1rem;
     margin:1rem;
     background-color: grey;
     width: fit-content;
@@ -17,6 +18,7 @@
    .filter{
        display: flex;
        align-items: center;
+       justify-content: space-between;
        gap:0.5rem
    }   
 }
