--- a/client/src/styles/CharacterCard.scss
+++ b/client/src/styles/CharacterCard.scss
@@ -1,7 +1,7 @@
 .card{
     display: flex;
     flex-direction: column;
-    gap:0.2rem;
+    gap:0.3rem;
     justify-content: space-between;
     padding: 0 0 0.4rem 0;
     border:1px solid grey;
@@ -21,12 +21,14 @@
  text-align: center;
   word-wrap:break-word;
   font-size: 1.6rem;
+  font-family: 'Ubuntu Condensed', sans-serif;
  }
 
 
 
 .tags{
     display: flex;
+    font-family: 'Lato', sans-serif; 
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
