--- a/client/src/styles/Filters.scss
+++ b/client/src/styles/Filters.scss
@@ -5,7 +5,7 @@
 
 .filterDiv{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     flex-wrap: wrap;
     column-gap:2rem;
@@ -18,7 +18,15 @@
    .filter{
        display: flex;
        align-items: center;
-       justify-content: space-between;
-       gap:0.5rem
+       gap:0.5rem;
+       max-width: fit-content;
+       font-family: 'Ubuntu Condensed', sans-serif;
+       input,select{
+           font-family: 'Ubuntu Condensed', sans-serif;
+           max-width: fit-content;
+           border-radius: 0.2rem;
+           border:0;
+           padding: 5px;
+       }
    }   
 }
