--- a/client/src/styles/Footer.scss
+++ b/client/src/styles/Footer.scss
@@ -2,8 +2,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:3rem;
+    gap:2rem;
+    margin-top: 1rem;
     button{
-        cursor: pointer;
+        background-color:darkslategray;
+        font-family: 'Ubuntu Condensed', sans-serif;
+        color:whitesmoke;
+        width: 8rem;
+        border:0;
+        border-radius: 1rem;
+        padding: 0.4rem;
+        font-size:large;
+        &:disabled{
+            background-color: lightslategrey;
+            cursor:not-allowed;        
+        }
     }
 }
