--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -7,3 +7,22 @@
     align-items: center;
     flex-direction: column;
 }
+
+.spinner{
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: transparent;
+    width: 36px;
+    height: 36px;
+    animation: spin 1s linear infinite;
+    border-radius: 50%;
+    
+}
+@keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+      
+        100% {
+          transform: rotate(360deg);
+        }
+      }
