--- a/client/src/styles/LandingPage.scss
+++ b/client/src/styles/LandingPage.scss
@@ -25,6 +25,10 @@
         font-family: 'Ubuntu Condensed', sans-serif;
         font-size: 4rem;
     }
+    li{
+        margin-bottom: 1rem;
+        margin-left: 10px;
+    }
     p{
          font-family: 'Lato', sans-serif; 
          font-weight: 700;
