--- a/client/src/styles/CharacterCard.scss
+++ b/client/src/styles/CharacterCard.scss
@@ -33,9 +33,37 @@
     align-items: center;
     flex-wrap: wrap;
     gap:1rem;
+    padding: 1px 1px;
     span{
         background-color: darkgray;
         border-radius: 3px;
         padding: 3px 5px;
+        display: flex;
+        align-items: center;
+        column-gap: 5px;
+        div{
+            width: 1rem;
+            height: 1rem;
+            border-radius: 50%;
+        }
     }
+}
+
+.Alive{
+    background-color: green;
+}
+.Dead{
+    background-color: red;
+}
+
+.unknown{
+    background-color: grey;
+}
+
+.Male{
+    background-color: lightblue;
+}
+
+.Female{
+    background-color: pink;
 }
